# cabbageandshame

./: .gitignore  CNAME  Pipfile  README.md  archives.html  authors.html  categories.html  index.html  index2.html  pelicanconf.py  publishconf.py  pyproject.toml  tags.html  tasks.py
author/: liza-kupreeva.html  nathan-ward.html  will-mathewson.html  will-mathewson2.html
category/: music.html  podcast.html
content/: 20191227-Wills_2019_Musings.md
content/2019/12/: Wills_2019_Musings.md
content/2020/1/: music_advent_calendar_2019.md
content/2020/10/: series_1_episode_4_ultra_mens_legss.md  series_1_episode_5_5_alexa_play_alexa.md  series_1_episode_5_the_cool_greenhouse.md  series_1_episode_6_the_halloween_special.md
content/2020/11/: series_1_episode_7_introspection_and_the_death_of_the_author.md  series_1_episode_8_a_monumental_episode.md
content/2020/5/: series_1_episode_0_what_is_post_punk.md
content/extra/: CNAME
drafts/: 20191227-Wills_2019_Musings.html  music-advent-calendar-2019.html  series-1-episode-4-ultra-mens-legss.html  wills-2019-musical-musings.html
feeds/: all.atom.xml  music.atom.xml  podcast.atom.xml
tag/: 2019.html  2020.html  black-country-new-road.html  cold-wave.html  eoy.html  famous.html  fontaines-dc.html  halloween.html  idles.html  legss.html  lyrics-miniseries.html  molchat-doma.html  monument.html  okay-champ.html  podcast.html  post-punk.html  series-1.html  talking-heads.html  the-cool-greenhouse.html  working-mens-club.html
theme/css/: hyde.css
theme/templates/: article.html  base.html  index.html  sidebar.html
(+45 files in other folders)
