[project]
name = "cabbageandshame"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "~=3.13.0"
dependencies = [
    "pelican[markdown]~=4.2.0",
    "pymdown-extensions~=6.2.0",
    "python-dateutil~=2.8.1",
]

[dependency-groups]
dev = [
    "invoke~=1.4.0",
    "ghp-import~=2.1.0",
    "ruff>=0.11.2",
]
