[project]
name = "cabbageandshame"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "~=3.13.0"
dependencies = [
    "pelican[markdown]~=4.11.0",
    "pymdown-extensions~=10.14.3",
    "typogrify>=2.1.0",
]

[dependency-groups]
dev = [
    "invoke~=2.2.0",
    "ghp-import~=2.1.0",
    "ruff>=0.11.2",
]
